# what

./: .gitignore  Cargo.toml  Dockerfile  README.md  deploy.sh  docker-compose.yml  rust-arb-bot.service  setup_hft_server.sh  worklog.md
.github/workflows/: ci.yml
monitoring/: prometheus.yml
src/: atomic_orderbook.rs  backtest.rs  balance_allocator.rs  balance_sync.rs  capital_starvation.rs  circuit_breaker.rs  coin_finder.rs  configs.rs  core_execution_shield.rs  cpu_pinning.rs  cross_exchange_executor.rs  datafeed.rs  dead_mans_switch.rs  depeg_protection.rs  discord.rs  dust_manager.rs  dynamic_fees.rs  exchange_constraints.rs  exchanges.rs  execution.rs  health.rs  lib.rs  live_order_tracker.rs  main.rs  market_arena.rs  metrics.rs  nonce_manager.rs  order_book.rs  order_feed.rs  paper_trading.rs  payload_arena.rs  persistence.rs  pnl_report.rs  position_reconciliation.rs  private_ws_feed.rs  production_risk_shield.rs  protections.rs  rate_limiter.rs  rebalance_matrix.rs  rebalancer.rs  (+18 more)
src/exchange/: binance.rs  bitfinex.rs  bitget.rs  bitmex.rs  bitstamp.rs  bybit.rs  coinbase.rs  common.rs  config.rs  delta.rs  deribit.rs  exchange_trait.rs  gateio.rs  htx.rs  ibank.rs  kraken.rs  kucoin.rs  lbank.rs  mexc.rs  mod.rs  okx.rs  types.rs
tests/: exchange_connectivity.rs  test_new_exchanges.rs
