[package]
name = "rust-hft-arb"
version = "1.0.0"
edition = "2021"
description = "High-frequency cross-exchange and triangular arbitrage bot with 14-layer risk system"

[dependencies]
tokio = { version = "1.38", features = ["full"] }
tokio-tungstenite = { version = "0.23", features = ["native-tls"] }
futures-util = "0.3"
rust_decimal = "1.35"
rust_decimal_macros = "1.35"
chrono = "0.4"
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
ring = "0.17"
hex = "0.4"
core_affinity = "0.8"
async-trait = "0.1"
reqwest = { version = "0.11", features = ["json", "native-tls"] }
serde_json = "1.0"
base64 = "0.22"
native-tls = "0.2"
tracing = "0.1"
tracing-subscriber = "0.3"
thiserror = "1.0"
anyhow = "1.0"
uuid = { version = "1", features = ["v4"] }
dotenvy = "0.15"
secrecy = "0.8"
dashmap = "5"
rand = "0.8"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"